# security-human-plus-ai

./: .env.example  .gitignore  .kiroignore  Caddyfile  Makefile  README.md  docker-compose.hackathon.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py  seed.py
backend/app/modules/: __init__.py
backend/app/modules/ai_proof_of_risk/: __init__.py  attack_surface_graph.py  digital_twin_scenario.py  enums.py  errors.py  evidence_normalizer.py  execution_evidence_provider.py  fireworks_provider.py  local_amd_provider.py  prompt_templates.py  proof_artifact.py  providers.py  redaction.py  remediation.py  report_generator.py  retest_planner.py  risk_tribunal.py  router.py  safety_policy.py  sandbox_guards.py  sandbox_runner.py  schemas.py  security_router.py  service.py
backend/app/modules/asset_verifications/: __init__.py  challenge_token.py  dns_resolver.py  enums.py  errors.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/assets/: __init__.py  enums.py  errors.py  models.py  mutation_policy.py  repository.py  router.py  schemas.py  service.py  target.py
backend/app/modules/audit_events/: __init__.py  models.py  (+4 more)
backend/app/platform/: clock.py  database.py  dependencies.py  error_handlers.py  errors.py  health.py  observability.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_foundation_organizations_projects_assets.py  0002_asset_verification_challenges.py  0003_authorizations.py  0004_engagements.py  0005_validation_executions.py  0006_auth_scope_ports_json.py  0007_validation_worker_credentials.py  0008_audit_events.py  0009_users_auth.py  0010_auth_token_version.py
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: test_ai_proof_of_risk_api.py  test_asset_hardening.py  test_asset_verification_api.py  test_asset_verification_security.py  test_assets_api.py  test_authorizations_api.py  test_authorizations_cross_tenant.py  test_cross_tenant.py  test_engagements_api.py  test_environment_guards.py  test_organizations_api.py  test_projects_api.py  test_slug_race.py  test_validation_celery_runtime_wiring.py  test_validation_dispatch_credential_issuance.py  test_validation_dispatch_in_memory.py  test_validation_executions_api.py  test_validation_in_memory_consumer_flow.py  test_validation_worker_credentials_db.py  test_validation_worker_hook_auth.py
backend/tests/unit/: test_ai_proof_of_risk_attack_graph.py  test_ai_proof_of_risk_digital_twin.py  test_ai_proof_of_risk_fireworks.py  test_ai_proof_of_risk_local_amd.py  test_ai_proof_of_risk_proof_artifact.py  test_ai_proof_of_risk_redaction.py  test_ai_proof_of_risk_remediation.py  test_ai_proof_of_risk_report.py  test_ai_proof_of_risk_retest.py  test_ai_proof_of_risk_risk_tribunal.py  test_ai_proof_of_risk_router.py  test_ai_proof_of_risk_sandbox_runner.py  test_ai_proof_of_risk_service.py  test_asset_mutation_policy.py  test_authorization_enums.py  test_authorization_state_transitions.py  test_challenge_token.py  test_dns_resolver.py  test_domain_safe_scan.py  test_engagement_state_transitions.py  test_network_ports.py  test_slug.py  test_target_normalization.py  test_validation_broker_contracts.py  test_validation_celery_publisher.py  test_validation_celery_runtime.py  test_validation_celery_worker.py  test_validation_credential_handoff.py  test_validation_credential_persistence.py  test_validation_dispatch_serialization.py  test_validation_dispatcher.py  test_validation_evidence_sanitization.py  test_validation_executor_http_headers.py  test_validation_http_transport.py  test_validation_httpx_client.py  test_validation_in_memory_consumer.py  test_validation_in_memory_queue.py  test_validation_kill_switch_control_plane.py  test_validation_result_mapping.py  test_validation_scope_snapshot.py  (+10 more)
(+203 files in other folders)
